--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -95,7 +95,7 @@
   .input-class {
     width: 100%;
   }
-  input {
+.footer-class  input {
     width: 50%;
   }
 }
@@ -116,7 +116,7 @@
     font-size: 16px;
 }
 
-input{
+.footer-class input{
     height: 46px;
     width: 60%;
     border: none;
